# bench

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.py
bench/: __init__.py  __main__.py  analysis.py  bdocker.py  bench.py  chain.py  tests.py  types.py
bench/langs/: __init__.py  cpp.py
bench/resources/: argparse.yml  benchmark.cpp
examples/: little-book-of-semaphores.sh
examples/local_test/: requirements.txt  run_test.py
examples/local_test/results/images/: benchmark_Dockerfile
examples/local_test/src/cpp/: CMakeLists.txt  Dockerfile  merge.cpp
examples/local_test/src/go/: Dockerfile  merge.go
examples/local_test/src/python/: Dockerfile  merge.py
examples/local_test/src/swift/: Dockerfile  Package.swift
examples/local_test/src/swift/Sources/merge/: main.swift
results/tables/: merge_sort_first_python3_recursive.csv  merge_sort_overall_python3_recursive.csv
